Some cleanup of spacing and fixing console errors

--- a/src-docs/src/components/guide_section/_guide_section.scss
+++ b/src-docs/src/components/guide_section/_guide_section.scss
@@ -1,6 +1,6 @@
 .guideSection {
   & + .guideSection {
-    margin-top: $euiSizeXL * 2;
+    margin-top: $euiSizeXL;
   }
 }
 
